# pi-controller

./: OPERATOR_CARD.md  PI_CONTROLLER_SPEC.md  QUICKSTART.md  README.md  STATUS.md  USER_GUIDE.md  pyproject.toml
app/: main.py
app/actions/: client.py  dispatcher.py  mapping.py
app/data/: db.py  models.py  repository.py  schema.py  seed.py
app/settings/: brightness.py  manager.py  settings_screen.py
app/ui/: app_window.py  gestures.py  screen_renderer.py  status_overlay.py  widgets.py
app/utils/: logging.py  threading.py  time.py
migrations/: 001_initial.sql  002_add_styling.sql  003_action_value_key.sql  004_screen_bg_mode.sql
scripts/: calibrate_touch.sh  enable_virtual_keyboard.sh  install_all.sh  install_backlight_permissions.sh  install_service.sh  touch_calibration_notes.sh
systemd/: pi-touch-controller.env.example  pi-touch-controller.service
